# ChangeLog for app-arch/rar
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/rar/ChangeLog,v 1.67 2011/01/01 11:21:19 phajdan.jr Exp $

  01 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> rar-3.9.3.ebuild:
  x86 stable wrt bug #349832

  31 Dec 2010; Markos Chandras <hwoarang@gentoo.org> rar-3.9.3.ebuild:
  Stable on amd64 wrt bug #349832

*rar-3.9.3-r1 (26 Dec 2010)

  26 Dec 2010; Mike Frysinger <vapier@gentoo.org> +rar-3.9.3-r1.ebuild,
  metadata.xml:
  Add USE=static and USE=all_sfx (for installing all SFX files).

*rar-3.9.3 (05 Oct 2010)

  05 Oct 2010; Michael Weber <xmw@gentoo.org> +rar-3.9.3.ebuild:
  Version bump wrt #339784, thanks to Mario Fetka for reporting.

*rar-3.9.2 (16 Feb 2010)

  16 Feb 2010; Samuli Suominen <ssuominen@gentoo.org> +rar-3.9.2.ebuild:
  Version bump wrt #305219, thanks to Nikos Chantziaras for reporting.

  27 Aug 2009; Víctor Ostorga <vostorga@gentoo.org> rar-3.9.0.ebuild:
  Fixing keywords

  27 Aug 2009; Víctor Ostorga <vostorga@gentoo.org> rar-3.9.0.ebuild:
  Sanitizing ebuild. Thanks to Samuli Suominen for the heads up

*rar-3.9.0 (25 Aug 2009)

  25 Aug 2009; Víctor Ostorga <vostorga@gentoo.org> +rar-3.9.0.ebuild:
  Version bump to 3.9.0 bug #282715 . Ebuild thanks to Nikos Chantziaras
  <realnc@gmail.com>

  03 May 2009; Mark Loeser <halcy0n@gentoo.org> -rar-3.7.1.ebuild:
  Remove old version as its dependency on virtual/libstdc++ was not
  specified well, and a newer version is already stable

  20 Nov 2008; Raúl Porcel <armin76@gentoo.org> rar-3.8.0.ebuild:
  x86 stable wrt #247118

  17 Nov 2008; Thomas Anderson <gentoofan23@gentoo.org> rar-3.8.0.ebuild:
  stable amd64, bug 247118

  05 Nov 2008; Jeroen Roovers <jer@gentoo.org> Manifest:
  Fix digest for rar-3.7.1. Thanks to fuxxy on IRC for reporting.

*rar-3.8.0 (02 Nov 2008)

  02 Nov 2008; Serkan Kaba <serkan@gentoo.org> +rar-3.8.0.ebuild: